# kuber-rust

./: Cargo.toml  build.rs
src/: commands.rs  main.rs  script.sh  server.rs
web/: package.json  tsconfig.json
web/src/: App.tsx  CommandOutput.tsx  api.ts  config.ts  index.html  theme.json  types.ts  websocket.ts
