[package]
name = "kuber-rust"
version = "0.1.0"
authors = ["Thomas <thomastimmer11@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# server
tokio = { version = "1.5", features = ["full"] }
warp = "0.3"
futures = "0.3"
url = { version = "2", features = ["serde"] }

# serialization
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"

# open browser
open = "1.7"

# runtime requirements check
which = "4.1"

# error dialog
rfd = "0.4"

# cli
structopt = { version = "0.3", default-features = false}

# command splitting
shell-words = "1.0"

# message streaming
tokio-util = "0.6"
